CJ | Exploring render issues on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,16 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* Chrome, Safari, Edge, Opera */
+.hide-input-arrows::-webkit-outer-spin-button,
+.hide-input-arrows::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.hide-input-arrows[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
